--- a/_src/_includes/base.njk
+++ b/_src/_includes/base.njk
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/images/logo-blue.png">">
     
-    <title>{{ title }}</title>
+    <title>Dreher Drama</title>
     <link rel="stylesheet" href="/css/main.css" media="all" onload="this.media='all'" fetchpriority="low">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
