--- a/css/main.css
+++ b/css/main.css
@@ -116,6 +116,11 @@ article .poster {
     margin: .5em 1em .5em 0;
     text-align: center;
     border-radius: 5px;
+    transition: .5s ease;
+}
+article .poster:hover {
+    filter: sepia();
+    transform: scale(1.02);
 }
 article {
     background-image: var(--backdrop);
