--- a/_publish/css/main.css
+++ b/_publish/css/main.css
@@ -118,6 +118,19 @@ article .poster {
     border-radius: 5px;
     transition: .5s ease;
 }
+article .link {
+    background: var(--glow);
+    color: var(--dreher-dark);
+    border-radius: 5px;
+    padding: .5em;
+    font-weight: bolder;
+    font-family: "Bebas Neue";
+    transition: .3s ease;
+    text-decoration: none;
+}
+article .link:hover {
+    background: white;
+}
 article .poster:hover {
     filter: sepia();
     transform: scale(1.02);
